2005-13-03
<pablo@netfilter.org>
	o Add support to filter events. ie: -p tcp --orig-port-dst 80 in
	conjuction with -E to get all the requests to HTTP servers
	o Update manpage
	o Missing static function declaration in the protocol handlers
	o Use protocol flags defined in libnetfilter_conntrack
	o Bumped version to 0.991

2005-11-22
<marcus@ingate.com>
	o Fix oversized number of options

2005-11-11
<laforge@netfilter.org>
	o don't check for kernel header path in configure, since we don't use
	  kernel headers
	o don't check for libnfnetlink, we don't use it directly
	o move plugins into pkglibdir
	o remove 'lib' prefix of plugins, they're not really libraries
	o remove version information from plugin filenames
	o Bumped version to 0.99
2005-11-09
<pablo@netfilter.org>
	o set status to zero, libnetfilter_conntrack now activate
	IPS_CONFIRMED since all conntrack in hash must be confirmed.
	o Bumped version to 0.98

2005-11-08
<olenf@ans.pl>
	o Fix warnings generated by gcc -Wall
	o Fix conntrack exit value at error
	o Replace obsolete inet_addr by inet_aton

2005-11-05
<olenf@ans.pl>
	o Improved conntrack -h output
	o add htons for icmp id.
<pablo@eurodev.net>
	o -t and -u are optional at update.
	o Fixed versioning :(
	o Bumped version to 0.97

2005-11-03
<laforge@netfilter.org>
	o Use extra 'data' argument of nfct_register_callback() function that
	  I've introduced in libetfilter_conntrack.
<olenf@ans.pl>
	o moves conntrack tool from bin to sbin directory since this
	application is an administration utility and it requires uid==0 or
	CAP_NET_ADMIN
<pablo@eurodev.net>
	o check if --state missing when -p is passed
	o command type is passed to final_check: checkings based on the
	command can be done now.
	o kill duplicated definition of IPS_* bits: Already present in 
	libnetfilter_conntrack.
	o Move action and command enum to conntrack.h
	o kill NIPQUAD macro
	o make conntrack handler cth static.
	o Bumped version to 0.96

2005-11-01
<pablo@eurodev.net>